fix: Update home link color for better visibility

--- a/content/style.css
+++ b/content/style.css
@@ -74,7 +74,7 @@ input.fake:checked+.modal {
   margin: 0;
   flex: 1;
   text-decoration: none;
-  color: #ff69b4 !important;
+  color: #886df3 !important;
 }
 
 .title>.link {
